[ADD] save URL & redirect when create new Tab

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,14 +10,13 @@
 	<div class="popup">
 		<div class="popup-content">
 			<div class="popup-header">
-				<h2>Popup</h2>
-				<span class="close">&times;</span>
+				<h2>Insert URL</h2>
 			</div>
 			<div class="popup-body">
-				<p>Some text in the popup</p>
+				<input id="url" type="text" />
 			</div>
 			<div class="popup-footer">
-				<h3>Popup Footer</h3>
+				<button id="submit" type="submit">save</button>
 			</div>
 		</div>
 	</div>
